Fase_01/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID goto_main program_libraries program_vars program_function program_main end
Rule 2     goto_main -> SEMICOLON
Rule 3     end -> END
Rule 4     empty -> <empty>
Rule 5     id_saver -> ID empty
Rule 6     int_const_saver -> CTE_INT
Rule 7     int_const_saver -> empty
Rule 8     release_exp -> empty
Rule 9     resources -> empty
Rule 10    program_libraries -> from_library import_library
Rule 11    program_libraries -> empty
Rule 12    from_library -> FROM ID
Rule 13    from_library -> empty
Rule 14    import_library -> IMPORT ID AS ID program_libraries
Rule 15    var_type -> var_c_type
Rule 16    var_type -> var_s_type
Rule 17    program_vars -> VAR var_type
Rule 18    program_vars -> empty
Rule 19    s_type -> INT
Rule 20    s_type -> FLOAT
Rule 21    s_type -> CHAR
Rule 22    c_type -> DATAFRAME
Rule 23    c_type -> DATE
Rule 24    var_multiple -> var_type
Rule 25    var_multiple -> empty
Rule 26    var_c_type -> c_type id_saver add_c_var var_c_type2 SEMICOLON var_multiple
Rule 27    var_c_type2 -> COMMA id_saver add_c_var var_c_type2
Rule 28    var_c_type2 -> empty
Rule 29    add_c_var -> empty
Rule 30    var_s_type -> s_type id_saver var_s_array add_s_var var_s_type2 SEMICOLON var_multiple
Rule 31    var_s_type2 -> COMMA id_saver var_s_array add_s_var var_s_type2
Rule 32    var_s_type2 -> empty
Rule 33    add_s_var -> empty
Rule 34    var_s_array -> LSQBRACKET var_s_dimesions RSQBRACKET var_s_matrix
Rule 35    var_s_array -> empty
Rule 36    var_s_matrix -> LSQBRACKET var_s_dimesions RSQBRACKET
Rule 37    var_s_matrix -> empty
Rule 38    var_s_dimesions -> CTE_INT empty
Rule 39    variable -> var_id_saver variable_array clear_dimension
Rule 40    clear_dimension -> empty
Rule 41    var_id_saver -> id_saver
Rule 42    variable_array -> LSQBRACKET index_arr_mat RSQBRACKET variable_matrix
Rule 43    variable_array -> empty
Rule 44    variable_matrix -> LSQBRACKET index_arr_mat RSQBRACKET
Rule 45    variable_matrix -> empty
Rule 46    index_arr_mat -> exp
Rule 47    program_function -> FUNCTION resources f_type id_saver func_creator LPAREN param RPAREN add_func_glob program_vars inner_body return end_function program_function
Rule 48    program_function -> empty
Rule 49    f_type -> INT
Rule 50    f_type -> FLOAT
Rule 51    f_type -> CHAR
Rule 52    f_type -> VOID
Rule 53    func_creator -> empty
Rule 54    add_func_glob -> LBRACKET
Rule 55    end_function -> RBRACKET
Rule 56    param -> s_type id_saver add_params param2
Rule 57    param -> empty
Rule 58    param2 -> COMMA s_type id_saver add_params param2
Rule 59    param2 -> empty
Rule 60    add_params -> empty
Rule 61    return -> return_np exp return_quad SEMICOLON
Rule 62    return -> empty_path_return
Rule 63    return_np -> RETURN
Rule 64    return_quad -> empty
Rule 65    empty_path_return -> empty
Rule 66    program_main -> main_id LBRACKET program_vars inner_body RBRACKET
Rule 67    main_id -> MAIN resources
Rule 68    body -> LBRACKET inner_body RBRACKET
Rule 69    inner_body -> statement inner_body
Rule 70    inner_body -> empty
Rule 71    assign -> variable keep_assign specialf_assign end_assign
Rule 72    specialf_assign -> exp
Rule 73    specialf_assign -> special_function
Rule 74    specialf_assign -> read
Rule 75    keep_assign -> ASSIGN empty
Rule 76    end_assign -> SEMICOLON empty
Rule 77    condition -> IF LPAREN exp RPAREN condition_GOTOF body condition2 SEMICOLON end_condition
Rule 78    condition2 -> ELSE condition_GOTO body
Rule 79    condition2 -> empty
Rule 80    condition_GOTOF -> empty
Rule 81    condition_GOTO -> empty
Rule 82    end_condition -> empty
Rule 83    print -> PRINT LPAREN print_many RPAREN SEMICOLON end_print_np
Rule 84    print_type -> exp
Rule 85    print_many -> print_type print_many2
Rule 86    print_many2 -> COMMA print_many_np print_many
Rule 87    print_many2 -> empty
Rule 88    print_many_np -> empty
Rule 89    end_print_np -> empty
Rule 90    read -> np_read LPAREN valid_exp_read read_np
Rule 91    np_read -> READ
Rule 92    valid_exp_read -> exp
Rule 93    read_np -> RPAREN
Rule 94    cycle -> for
Rule 95    cycle -> while
Rule 96    while -> DO seed body WHILE LPAREN exp RPAREN SEMICOLON gotoV
Rule 97    seed -> empty
Rule 98    gotoV -> empty
Rule 99    for -> FOR LPAREN for_control keep_assign exp for_np1 for_end body for_np2
Rule 100   for_control -> id_saver
Rule 101   for_np1 -> TO
Rule 102   for_end -> int_const_saver RPAREN
Rule 103   for_np2 -> SEMICOLON
Rule 104   call_function -> function_saver function_flag call_params check_not_void
Rule 105   check_not_void -> RPAREN
Rule 106   call_void_function -> function_saver function_flag call_params verify_params check_void
Rule 107   verify_params -> RPAREN
Rule 108   check_void -> SEMICOLON
Rule 109   function_saver -> ID empty
Rule 110   function_flag -> LPAREN
Rule 111   call_params -> check_param exp_many
Rule 112   call_params -> empty
Rule 113   check_param -> exp
Rule 114   exp_many -> COMMA check_param exp_many
Rule 115   exp_many -> empty
Rule 116   statement -> assign
Rule 117   statement -> condition
Rule 118   statement -> print
Rule 119   statement -> cycle
Rule 120   statement -> call_void_function
Rule 121   special_function -> exploration
Rule 122   special_function -> financial_state
Rule 123   special_function -> dummi_regression
Rule 124   special_function -> season_analysis
Rule 125   special_function -> trend_prediction
Rule 126   special_function -> model_predict
Rule 127   tag_sp -> LPAREN
Rule 128   exploration -> EXPLORATION tag_sp variable explore_var np_check_size
Rule 129   sp_param -> COMMA
Rule 130   np_check_size -> RPAREN
Rule 131   explore_var -> sp_param variable explor_cte
Rule 132   explore_var -> empty
Rule 133   explor_cte -> sp_param int_const_saver
Rule 134   explor_cte -> empty
Rule 135   financial_state -> FINANCIAL_STATE tag_sp variable sp_param variable sp_param variable sp_param variable np_check_size
Rule 136   season_analysis -> SEASON_ANALYSIS tag_sp variable np_check_size
Rule 137   trend_prediction -> TREND_PREDICTION tag_sp variable sp_param int_const_saver sp_param int_const_saver sp_param int_const_saver np_check_size
Rule 138   dummi_regression -> DUMMI_REGRESSION tag_sp variable sp_param variable dr_array dr_int np_check_size
Rule 139   dr_array -> COMMA LSQBRACKET CTE_CHAR dr_array_mp RSQBRACKET
Rule 140   dr_array -> empty
Rule 141   dr_array_mp -> COMMA CTE_CHAR dr_array_mp
Rule 142   dr_array_mp -> empty
Rule 143   dr_int -> COMMA int_const_saver
Rule 144   dr_int -> empty
Rule 145   model_predict -> MODEL_PREDICT tag_sp variable sp_param variable np_check_size
Rule 146   exp -> t_exp release_exp exp_or
Rule 147   exp_or -> exp_keep_or exp
Rule 148   exp_or -> empty
Rule 149   exp_keep_or -> OR
Rule 150   t_exp -> expression release_exp t_exp_and
Rule 151   t_exp_and -> keep_and t_exp
Rule 152   t_exp_and -> empty
Rule 153   keep_and -> AND
Rule 154   expression -> m_exp release_exp expression_comp
Rule 155   expression_comp -> expression_comp_2 m_exp release_exp
Rule 156   expression_comp -> empty
Rule 157   expression_comp_2 -> GTHAN
Rule 158   expression_comp_2 -> EQUAL
Rule 159   expression_comp_2 -> NOTEQUAL
Rule 160   expression_comp_2 -> LTHAN
Rule 161   expression_comp_2 -> GORE
Rule 162   expression_comp_2 -> LORE
Rule 163   m_exp -> term release_exp m_exp_sr
Rule 164   m_exp_sr -> m_exp_sr_2 m_exp
Rule 165   m_exp_sr -> empty
Rule 166   m_exp_sr_2 -> PLUS
Rule 167   m_exp_sr_2 -> MINUS
Rule 168   term -> sub_factor release_exp term_pc
Rule 169   term_pc -> term_pc_2 term
Rule 170   term_pc -> empty
Rule 171   term_pc_2 -> MULTIPLY
Rule 172   term_pc_2 -> DIVIDE
Rule 173   term_pc_2 -> MODULE
Rule 174   sub_factor -> factor release_exp sub_factor_pc
Rule 175   sub_factor_pc -> sub_factor_pc_2 sub_factor
Rule 176   sub_factor_pc -> empty
Rule 177   sub_factor_pc_2 -> POWER empty
Rule 178   factor -> factor_exp
Rule 179   factor -> factor_cte
Rule 180   factor -> variable
Rule 181   factor -> call_function
Rule 182   factor_exp -> false_button exp release_false_button
Rule 183   false_button -> LPAREN
Rule 184   release_false_button -> RPAREN
Rule 185   factor_cte -> CTE_FLOAT
Rule 186   factor_cte -> CTE_INT
Rule 187   factor_cte -> CTE_CHAR

Terminals, with rules where they appear

AND                  : 153
AS                   : 14
ASSIGN               : 75
CHAR                 : 21 51
COLON                : 
COMMA                : 27 31 58 86 114 129 139 141 143
CTE_CHAR             : 139 141 187
CTE_FLOAT            : 185
CTE_INT              : 6 38 186
DATAFRAME            : 22
DATE                 : 23
DIVIDE               : 172
DO                   : 96
DUMMI_REGRESSION     : 138
ELSE                 : 78
END                  : 3
EQUAL                : 158
EXPLORATION          : 128
FINANCIAL_STATE      : 135
FLOAT                : 20 50
FOR                  : 99
FROM                 : 12
FUNCTION             : 47
GORE                 : 161
GTHAN                : 157
ID                   : 1 5 12 14 14 109
IF                   : 77
IMPORT               : 14
INT                  : 19 49
LBRACKET             : 54 66 68
LORE                 : 162
LPAREN               : 47 77 83 90 96 99 110 127 183
LSQBRACKET           : 34 36 42 44 139
LTHAN                : 160
MAIN                 : 67
MINUS                : 167
MODEL_PREDICT        : 145
MODULE               : 173
MULTIPLY             : 171
NOTEQUAL             : 159
OR                   : 149
PLUS                 : 166
POWER                : 177
PRINT                : 83
PROGRAM              : 1
RBRACKET             : 55 66 68
READ                 : 91
RETURN               : 63
RPAREN               : 47 77 83 93 96 102 105 107 130 184
RSQBRACKET           : 34 36 42 44 139
SEASON_ANALYSIS      : 136
SEMICOLON            : 2 26 30 61 76 77 83 96 103 108
TO                   : 101
TREND_PREDICTION     : 137
VAR                  : 17
VOID                 : 52
WHILE                : 96
error                : 

Nonterminals, with rules where they appear

add_c_var            : 26 27
add_func_glob        : 47
add_params           : 56 58
add_s_var            : 30 31
assign               : 116
body                 : 77 78 96 99
c_type               : 26
call_function        : 181
call_params          : 104 106
call_void_function   : 120
check_not_void       : 104
check_param          : 111 114
check_void           : 106
clear_dimension      : 39
condition            : 117
condition2           : 77
condition_GOTO       : 78
condition_GOTOF      : 77
cycle                : 119
dr_array             : 138
dr_array_mp          : 139 141
dr_int               : 138
dummi_regression     : 123
empty                : 5 7 8 9 11 13 18 25 28 29 32 33 35 37 38 40 43 45 48 53 57 59 60 64 65 70 75 76 79 80 81 82 87 88 89 97 98 109 112 115 132 134 140 142 144 148 152 156 165 170 176 177
empty_path_return    : 62
end                  : 1
end_assign           : 71
end_condition        : 77
end_function         : 47
end_print_np         : 83
exp                  : 46 61 72 77 84 92 96 99 113 147 182
exp_keep_or          : 147
exp_many             : 111 114
exp_or               : 146
explor_cte           : 131
exploration          : 121
explore_var          : 128
expression           : 150
expression_comp      : 154
expression_comp_2    : 155
f_type               : 47
factor               : 174
factor_cte           : 179
factor_exp           : 178
false_button         : 182
financial_state      : 122
for                  : 94
for_control          : 99
for_end              : 99
for_np1              : 99
for_np2              : 99
from_library         : 10
func_creator         : 47
function_flag        : 104 106
function_saver       : 104 106
gotoV                : 96
goto_main            : 1
id_saver             : 26 27 30 31 41 47 56 58 100
import_library       : 10
index_arr_mat        : 42 44
inner_body           : 47 66 68 69
int_const_saver      : 102 133 137 137 137 143
keep_and             : 151
keep_assign          : 71 99
m_exp                : 154 155 164
m_exp_sr             : 163
m_exp_sr_2           : 164
main_id              : 66
model_predict        : 126
np_check_size        : 128 135 136 137 138 145
np_read              : 90
param                : 47
param2               : 56 58
print                : 118
print_many           : 83 86
print_many2          : 85
print_many_np        : 86
print_type           : 85
program              : 0
program_function     : 1 47
program_libraries    : 1 14
program_main         : 1
program_vars         : 1 47 66
read                 : 74
read_np              : 90
release_exp          : 146 150 154 155 163 168 174
release_false_button : 182
resources            : 47 67
return               : 47
return_np            : 61
return_quad          : 61
s_type               : 30 56 58
season_analysis      : 124
seed                 : 96
sp_param             : 131 133 135 135 135 137 137 137 138 145
special_function     : 73
specialf_assign      : 71
statement            : 69
sub_factor           : 168 175
sub_factor_pc        : 174
sub_factor_pc_2      : 175
t_exp                : 146 151
t_exp_and            : 150
tag_sp               : 128 135 136 137 138 145
term                 : 163 169
term_pc              : 168
term_pc_2            : 169
trend_prediction     : 125
valid_exp_read       : 90
var_c_type           : 15
var_c_type2          : 26 27
var_id_saver         : 39
var_multiple         : 26 30
var_s_array          : 30 31
var_s_dimesions      : 34 36
var_s_matrix         : 34
var_s_type           : 16
var_s_type2          : 30 31
var_type             : 17 24
variable             : 71 128 131 135 135 135 135 136 137 138 138 145 145 180
variable_array       : 39
variable_matrix      : 42
verify_params        : 106
while                : 95

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID goto_main program_libraries program_vars program_function program_main end

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID goto_main program_libraries program_vars program_function program_main end

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . goto_main program_libraries program_vars program_function program_main end
    (2) goto_main -> . SEMICOLON

    SEMICOLON       shift and go to state 5

    goto_main                      shift and go to state 4

state 4

    (1) program -> PROGRAM ID goto_main . program_libraries program_vars program_function program_main end
    (10) program_libraries -> . from_library import_library
    (11) program_libraries -> . empty
    (12) from_library -> . FROM ID
    (13) from_library -> . empty
    (4) empty -> .

    FROM            shift and go to state 9
    VAR             reduce using rule 4 (empty -> .)
    FUNCTION        reduce using rule 4 (empty -> .)
    MAIN            reduce using rule 4 (empty -> .)
    IMPORT          reduce using rule 4 (empty -> .)

    program_libraries              shift and go to state 6
    from_library                   shift and go to state 7
    empty                          shift and go to state 8

state 5

    (2) goto_main -> SEMICOLON .

    FROM            reduce using rule 2 (goto_main -> SEMICOLON .)
    VAR             reduce using rule 2 (goto_main -> SEMICOLON .)
    FUNCTION        reduce using rule 2 (goto_main -> SEMICOLON .)
    MAIN            reduce using rule 2 (goto_main -> SEMICOLON .)
    IMPORT          reduce using rule 2 (goto_main -> SEMICOLON .)


state 6

    (1) program -> PROGRAM ID goto_main program_libraries . program_vars program_function program_main end
    (17) program_vars -> . VAR var_type
    (18) program_vars -> . empty
    (4) empty -> .

    VAR             shift and go to state 11
    FUNCTION        reduce using rule 4 (empty -> .)
    MAIN            reduce using rule 4 (empty -> .)

    program_vars                   shift and go to state 10
    empty                          shift and go to state 12

state 7

    (10) program_libraries -> from_library . import_library
    (14) import_library -> . IMPORT ID AS ID program_libraries

    IMPORT          shift and go to state 14

    import_library                 shift and go to state 13

state 8

    (11) program_libraries -> empty .
    (13) from_library -> empty .

    VAR             reduce using rule 11 (program_libraries -> empty .)
    FUNCTION        reduce using rule 11 (program_libraries -> empty .)
    MAIN            reduce using rule 11 (program_libraries -> empty .)
    IMPORT          reduce using rule 13 (from_library -> empty .)


state 9

    (12) from_library -> FROM . ID

    ID              shift and go to state 15


state 10

    (1) program -> PROGRAM ID goto_main program_libraries program_vars . program_function program_main end
    (47) program_function -> . FUNCTION resources f_type id_saver func_creator LPAREN param RPAREN add_func_glob program_vars inner_body return end_function program_function
    (48) program_function -> . empty
    (4) empty -> .

    FUNCTION        shift and go to state 17
    MAIN            reduce using rule 4 (empty -> .)

    program_function               shift and go to state 16
    empty                          shift and go to state 18

state 11

    (17) program_vars -> VAR . var_type
    (15) var_type -> . var_c_type
    (16) var_type -> . var_s_type
    (26) var_c_type -> . c_type id_saver add_c_var var_c_type2 SEMICOLON var_multiple
    (30) var_s_type -> . s_type id_saver var_s_array add_s_var var_s_type2 SEMICOLON var_multiple
    (22) c_type -> . DATAFRAME
    (23) c_type -> . DATE
    (19) s_type -> . INT
    (20) s_type -> . FLOAT
    (21) s_type -> . CHAR

    DATAFRAME       shift and go to state 24
    DATE            shift and go to state 25
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    CHAR            shift and go to state 28

    var_type                       shift and go to state 19
    var_c_type                     shift and go to state 20
    var_s_type                     shift and go to state 21
    c_type                         shift and go to state 22
    s_type                         shift and go to state 23

state 12

    (18) program_vars -> empty .

    FUNCTION        reduce using rule 18 (program_vars -> empty .)
    MAIN            reduce using rule 18 (program_vars -> empty .)
    IF              reduce using rule 18 (program_vars -> empty .)
    PRINT           reduce using rule 18 (program_vars -> empty .)
    FOR             reduce using rule 18 (program_vars -> empty .)
    DO              reduce using rule 18 (program_vars -> empty .)
    ID              reduce using rule 18 (program_vars -> empty .)
    RBRACKET        reduce using rule 18 (program_vars -> empty .)
    RETURN          reduce using rule 18 (program_vars -> empty .)


state 13

    (10) program_libraries -> from_library import_library .

    VAR             reduce using rule 10 (program_libraries -> from_library import_library .)
    FUNCTION        reduce using rule 10 (program_libraries -> from_library import_library .)
    MAIN            reduce using rule 10 (program_libraries -> from_library import_library .)


state 14

    (14) import_library -> IMPORT . ID AS ID program_libraries

    ID              shift and go to state 29


state 15

    (12) from_library -> FROM ID .

    IMPORT          reduce using rule 12 (from_library -> FROM ID .)


state 16

    (1) program -> PROGRAM ID goto_main program_libraries program_vars program_function . program_main end
    (66) program_main -> . main_id LBRACKET program_vars inner_body RBRACKET
    (67) main_id -> . MAIN resources

    MAIN            shift and go to state 32

    program_main                   shift and go to state 30
    main_id                        shift and go to state 31

state 17

    (47) program_function -> FUNCTION . resources f_type id_saver func_creator LPAREN param RPAREN add_func_glob program_vars inner_body return end_function program_function
    (9) resources -> . empty
    (4) empty -> .

    INT             reduce using rule 4 (empty -> .)
    FLOAT           reduce using rule 4 (empty -> .)
    CHAR            reduce using rule 4 (empty -> .)
    VOID            reduce using rule 4 (empty -> .)

    resources                      shift and go to state 33
    empty                          shift and go to state 34

state 18

    (48) program_function -> empty .

    MAIN            reduce using rule 48 (program_function -> empty .)


state 19

    (17) program_vars -> VAR var_type .

    FUNCTION        reduce using rule 17 (program_vars -> VAR var_type .)
    MAIN            reduce using rule 17 (program_vars -> VAR var_type .)
    IF              reduce using rule 17 (program_vars -> VAR var_type .)
    PRINT           reduce using rule 17 (program_vars -> VAR var_type .)
    FOR             reduce using rule 17 (program_vars -> VAR var_type .)
    DO              reduce using rule 17 (program_vars -> VAR var_type .)
    ID              reduce using rule 17 (program_vars -> VAR var_type .)
    RBRACKET        reduce using rule 17 (program_vars -> VAR var_type .)
    RETURN          reduce using rule 17 (program_vars -> VAR var_type .)


state 20

    (15) var_type -> var_c_type .

    FUNCTION        reduce using rule 15 (var_type -> var_c_type .)
    MAIN            reduce using rule 15 (var_type -> var_c_type .)
    IF              reduce using rule 15 (var_type -> var_c_type .)
    PRINT           reduce using rule 15 (var_type -> var_c_type .)
    FOR             reduce using rule 15 (var_type -> var_c_type .)
    DO              reduce using rule 15 (var_type -> var_c_type .)
    ID              reduce using rule 15 (var_type -> var_c_type .)
    RBRACKET        reduce using rule 15 (var_type -> var_c_type .)
    RETURN          reduce using rule 15 (var_type -> var_c_type .)


state 21

    (16) var_type -> var_s_type .

    FUNCTION        reduce using rule 16 (var_type -> var_s_type .)
    MAIN            reduce using rule 16 (var_type -> var_s_type .)
    IF              reduce using rule 16 (var_type -> var_s_type .)
    PRINT           reduce using rule 16 (var_type -> var_s_type .)
    FOR             reduce using rule 16 (var_type -> var_s_type .)
    DO              reduce using rule 16 (var_type -> var_s_type .)
    ID              reduce using rule 16 (var_type -> var_s_type .)
    RBRACKET        reduce using rule 16 (var_type -> var_s_type .)
    RETURN          reduce using rule 16 (var_type -> var_s_type .)


state 22

    (26) var_c_type -> c_type . id_saver add_c_var var_c_type2 SEMICOLON var_multiple
    (5) id_saver -> . ID empty

    ID              shift and go to state 36

    id_saver                       shift and go to state 35

state 23

    (30) var_s_type -> s_type . id_saver var_s_array add_s_var var_s_type2 SEMICOLON var_multiple
    (5) id_saver -> . ID empty

    ID              shift and go to state 36

    id_saver                       shift and go to state 37

state 24

    (22) c_type -> DATAFRAME .

    ID              reduce using rule 22 (c_type -> DATAFRAME .)


state 25

    (23) c_type -> DATE .

    ID              reduce using rule 23 (c_type -> DATE .)


state 26

    (19) s_type -> INT .

    ID              reduce using rule 19 (s_type -> INT .)


state 27

    (20) s_type -> FLOAT .

    ID              reduce using rule 20 (s_type -> FLOAT .)


state 28

    (21) s_type -> CHAR .

    ID              reduce using rule 21 (s_type -> CHAR .)


state 29

    (14) import_library -> IMPORT ID . AS ID program_libraries

    AS              shift and go to state 38


state 30

    (1) program -> PROGRAM ID goto_main program_libraries program_vars program_function program_main . end
    (3) end -> . END

    END             shift and go to state 40

    end                            shift and go to state 39

state 31

    (66) program_main -> main_id . LBRACKET program_vars inner_body RBRACKET

    LBRACKET        shift and go to state 41


state 32

    (67) main_id -> MAIN . resources
    (9) resources -> . empty
    (4) empty -> .

    LBRACKET        reduce using rule 4 (empty -> .)

    resources                      shift and go to state 42
    empty                          shift and go to state 34

state 33

    (47) program_function -> FUNCTION resources . f_type id_saver func_creator LPAREN param RPAREN add_func_glob program_vars inner_body return end_function program_function
    (49) f_type -> . INT
    (50) f_type -> . FLOAT
    (51) f_type -> . CHAR
    (52) f_type -> . VOID

    INT             shift and go to state 44
    FLOAT           shift and go to state 45
    CHAR            shift and go to state 46
    VOID            shift and go to state 47

    f_type                         shift and go to state 43

state 34

    (9) resources -> empty .

    INT             reduce using rule 9 (resources -> empty .)
    FLOAT           reduce using rule 9 (resources -> empty .)
    CHAR            reduce using rule 9 (resources -> empty .)
    VOID            reduce using rule 9 (resources -> empty .)
    LBRACKET        reduce using rule 9 (resources -> empty .)


state 35

    (26) var_c_type -> c_type id_saver . add_c_var var_c_type2 SEMICOLON var_multiple
    (29) add_c_var -> . empty
    (4) empty -> .

    COMMA           reduce using rule 4 (empty -> .)
    SEMICOLON       reduce using rule 4 (empty -> .)

    add_c_var                      shift and go to state 48
    empty                          shift and go to state 49

state 36

    (5) id_saver -> ID . empty
    (4) empty -> .

    COMMA           reduce using rule 4 (empty -> .)
    SEMICOLON       reduce using rule 4 (empty -> .)
    LSQBRACKET      reduce using rule 4 (empty -> .)
    LPAREN          reduce using rule 4 (empty -> .)
    ASSIGN          reduce using rule 4 (empty -> .)
    RPAREN          reduce using rule 4 (empty -> .)

    empty                          shift and go to state 50

state 37

    (30) var_s_type -> s_type id_saver . var_s_array add_s_var var_s_type2 SEMICOLON var_multiple
    (34) var_s_array -> . LSQBRACKET var_s_dimesions RSQBRACKET var_s_matrix
    (35) var_s_array -> . empty
    (4) empty -> .

    LSQBRACKET      shift and go to state 52
    COMMA           reduce using rule 4 (empty -> .)
    SEMICOLON       reduce using rule 4 (empty -> .)

    var_s_array                    shift and go to state 51
    empty                          shift and go to state 53

state 38

    (14) import_library -> IMPORT ID AS . ID program_libraries

    ID              shift and go to state 54


state 39

    (1) program -> PROGRAM ID goto_main program_libraries program_vars program_function program_main end .

    $end            reduce using rule 1 (program -> PROGRAM ID goto_main program_libraries program_vars program_function program_main end .)


state 40

    (3) end -> END .

    $end            reduce using rule 3 (end -> END .)


state 41

    (66) program_main -> main_id LBRACKET . program_vars inner_body RBRACKET
    (17) program_vars -> . VAR var_type
    (18) program_vars -> . empty
    (4) empty -> .

    VAR             shift and go to state 11
    IF              reduce using rule 4 (empty -> .)
    PRINT           reduce using rule 4 (empty -> .)
    FOR             reduce using rule 4 (empty -> .)
    DO              reduce using rule 4 (empty -> .)
    ID              reduce using rule 4 (empty -> .)
    RBRACKET        reduce using rule 4 (empty -> .)

    program_vars                   shift and go to state 55
    empty                          shift and go to state 12

state 42

    (67) main_id -> MAIN resources .

    LBRACKET        reduce using rule 67 (main_id -> MAIN resources .)


state 43

    (47) program_function -> FUNCTION resources f_type . id_saver func_creator LPAREN param RPAREN add_func_glob program_vars inner_body return end_function program_function
    (5) id_saver -> . ID empty

    ID              shift and go to state 36

    id_saver                       shift and go to state 56

state 44

    (49) f_type -> INT .

    ID              reduce using rule 49 (f_type -> INT .)


state 45

    (50) f_type -> FLOAT .

    ID              reduce using rule 50 (f_type -> FLOAT .)


state 46

    (51) f_type -> CHAR .

    ID              reduce using rule 51 (f_type -> CHAR .)


state 47

    (52) f_type -> VOID .

    ID              reduce using rule 52 (f_type -> VOID .)


state 48

    (26) var_c_type -> c_type id_saver add_c_var . var_c_type2 SEMICOLON var_multiple
    (27) var_c_type2 -> . COMMA id_saver add_c_var var_c_type2
    (28) var_c_type2 -> . empty
    (4) empty -> .

    COMMA           shift and go to state 58
    SEMICOLON       reduce using rule 4 (empty -> .)

    var_c_type2                    shift and go to state 57
    empty                          shift and go to state 59

state 49

    (29) add_c_var -> empty .

    COMMA           reduce using rule 29 (add_c_var -> empty .)
    SEMICOLON       reduce using rule 29 (add_c_var -> empty .)


state 50

    (5) id_saver -> ID empty .

    COMMA           reduce using rule 5 (id_saver -> ID empty .)
    SEMICOLON       reduce using rule 5 (id_saver -> ID empty .)
    LSQBRACKET      reduce using rule 5 (id_saver -> ID empty .)
    LPAREN          reduce using rule 5 (id_saver -> ID empty .)
    ASSIGN          reduce using rule 5 (id_saver -> ID empty .)
    RPAREN          reduce using rule 5 (id_saver -> ID empty .)


state 51

    (30) var_s_type -> s_type id_saver var_s_array . add_s_var var_s_type2 SEMICOLON var_multiple
    (33) add_s_var -> . empty
    (4) empty -> .

    COMMA           reduce using rule 4 (empty -> .)
    SEMICOLON       reduce using rule 4 (empty -> .)

    add_s_var                      shift and go to state 60
    empty                          shift and go to state 61

state 52

    (34) var_s_array -> LSQBRACKET . var_s_dimesions RSQBRACKET var_s_matrix
    (38) var_s_dimesions -> . CTE_INT empty

    CTE_INT         shift and go to state 63

    var_s_dimesions                shift and go to state 62

state 53

    (35) var_s_array -> empty .

    COMMA           reduce using rule 35 (var_s_array -> empty .)
    SEMICOLON       reduce using rule 35 (var_s_array -> empty .)


state 54

    (14) import_library -> IMPORT ID AS ID . program_libraries
    (10) program_libraries -> . from_library import_library
    (11) program_libraries -> . empty
    (12) from_library -> . FROM ID
    (13) from_library -> . empty
    (4) empty -> .

    FROM            shift and go to state 9
    VAR             reduce using rule 4 (empty -> .)
    FUNCTION        reduce using rule 4 (empty -> .)
    MAIN            reduce using rule 4 (empty -> .)
    IMPORT          reduce using rule 4 (empty -> .)

    program_libraries              shift and go to state 64
    from_library                   shift and go to state 7
    empty                          shift and go to state 8

state 55

    (66) program_main -> main_id LBRACKET program_vars . inner_body RBRACKET
    (69) inner_body -> . statement inner_body
    (70) inner_body -> . empty
    (116) statement -> . assign
    (117) statement -> . condition
    (118) statement -> . print
    (119) statement -> . cycle
    (120) statement -> . call_void_function
    (4) empty -> .
    (71) assign -> . variable keep_assign specialf_assign end_assign
    (77) condition -> . IF LPAREN exp RPAREN condition_GOTOF body condition2 SEMICOLON end_condition
    (83) print -> . PRINT LPAREN print_many RPAREN SEMICOLON end_print_np
    (94) cycle -> . for
    (95) cycle -> . while
    (106) call_void_function -> . function_saver function_flag call_params verify_params check_void
    (39) variable -> . var_id_saver variable_array clear_dimension
    (99) for -> . FOR LPAREN for_control keep_assign exp for_np1 for_end body for_np2
    (96) while -> . DO seed body WHILE LPAREN exp RPAREN SEMICOLON gotoV
    (109) function_saver -> . ID empty
    (41) var_id_saver -> . id_saver
    (5) id_saver -> . ID empty

    RBRACKET        reduce using rule 4 (empty -> .)
    IF              shift and go to state 74
    PRINT           shift and go to state 75
    FOR             shift and go to state 80
    DO              shift and go to state 81
    ID              shift and go to state 82

    inner_body                     shift and go to state 65
    statement                      shift and go to state 66
    empty                          shift and go to state 67
    assign                         shift and go to state 68
    condition                      shift and go to state 69
    print                          shift and go to state 70
    cycle                          shift and go to state 71
    call_void_function             shift and go to state 72
    variable                       shift and go to state 73
    for                            shift and go to state 76
    while                          shift and go to state 77
    function_saver                 shift and go to state 78
    var_id_saver                   shift and go to state 79
    id_saver                       shift and go to state 83

state 56

    (47) program_function -> FUNCTION resources f_type id_saver . func_creator LPAREN param RPAREN add_func_glob program_vars inner_body return end_function program_function
    (53) func_creator -> . empty
    (4) empty -> .

    LPAREN          reduce using rule 4 (empty -> .)

    func_creator                   shift and go to state 84
    empty                          shift and go to state 85

state 57

    (26) var_c_type -> c_type id_saver add_c_var var_c_type2 . SEMICOLON var_multiple

    SEMICOLON       shift and go to state 86


state 58

    (27) var_c_type2 -> COMMA . id_saver add_c_var var_c_type2
    (5) id_saver -> . ID empty

    ID              shift and go to state 36

    id_saver                       shift and go to state 87

state 59

    (28) var_c_type2 -> empty .

    SEMICOLON       reduce using rule 28 (var_c_type2 -> empty .)


state 60

    (30) var_s_type -> s_type id_saver var_s_array add_s_var . var_s_type2 SEMICOLON var_multiple
    (31) var_s_type2 -> . COMMA id_saver var_s_array add_s_var var_s_type2
    (32) var_s_type2 -> . empty
    (4) empty -> .

    COMMA           shift and go to state 89
    SEMICOLON       reduce using rule 4 (empty -> .)

    var_s_type2                    shift and go to state 88
    empty                          shift and go to state 90

state 61

    (33) add_s_var -> empty .

    COMMA           reduce using rule 33 (add_s_var -> empty .)
    SEMICOLON       reduce using rule 33 (add_s_var -> empty .)


state 62

    (34) var_s_array -> LSQBRACKET var_s_dimesions . RSQBRACKET var_s_matrix

    RSQBRACKET      shift and go to state 91


state 63

    (38) var_s_dimesions -> CTE_INT . empty
    (4) empty -> .

    RSQBRACKET      reduce using rule 4 (empty -> .)

    empty                          shift and go to state 92

state 64

    (14) import_library -> IMPORT ID AS ID program_libraries .

    VAR             reduce using rule 14 (import_library -> IMPORT ID AS ID program_libraries .)
    FUNCTION        reduce using rule 14 (import_library -> IMPORT ID AS ID program_libraries .)
    MAIN            reduce using rule 14 (import_library -> IMPORT ID AS ID program_libraries .)


state 65
